Revamp company page

--- a/company.html
+++ b/company.html
@@ -2,16 +2,53 @@
 title: "Our Company"
 description: "Esteemed is a workforce enablement solutions company. We are on a mission to simplify work, and make it more rewarding, flexible, and fun. Learn more about our vision. "
 image: "/img/our-company.png"
+layout: default
 permalink: "/company/"
 ---
 
-<section id="section-01" class="section our-team">
-  <div class="grid-container">
-    <h1 class="text-center u-trailer u-text-bold"><strong>We’re on a mission<br></strong> to help people around the world<br><strong>work smarter not harder.</strong></h1>
-    <div class="cell text-center"><a href="mailto:jobs@esteemed.io?subject=Opportunities%20at%20Esteemed&body=Dear%20future%20Esteemed%20Colleague,%0D%0A%0D%0AI%20am%20writing%20with%20interest%20in%20exploring%20opportunities%20with%20your%20team.%20I%20have%20attached%20a%20recent%20copy%20of%20my%20resume%20for%20your%20review.%20I%20look%20forward%20to%20further%20discussion.%0D%0A%0D%0AThank%20you!" class="button" target="_blank">Join our Team</a></div>
+<section id="section-company-01" class="section padding-vertical-0">
+  <div class="cards-list-reverse">
+    <div class="card-horizontal overflow-hidden">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h1 class="u-trailer u-text-bold">Helping people work smarter, not harder</h1>
+
+          <div class="cell">
+            <a href="mailto:jobs@esteemed.io?subject=Opportunities%20at%20Esteemed&body=Dear%20future%20Esteemed%20Colleague,%0D%0A%0D%0AI%20am%20writing%20with%20interest%20in%20exploring%20opportunities%20with%20your%20team.%20I%20have%20attached%20a%20recent%20copy%20of%20my%20resume%20for%20your%20review.%20I%20look%20forward%20to%20further%20discussion.%0D%0A%0D%0AThank%20you!" class="button" target="_blank">Join our Team</a>
+          </div>
+        </div>
+
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+          <div class="width-50vw">
+            <img src="/img/company/01.jpg" alt="Helping people work smarter, not harder">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-horizontal overflow-hidden">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h1 class="u-trailer u-text-bold">We're a refreshingly open company.</h1>
+
+          <div class="cell">
+            <p class="card-text">
+              Our open source software, open product roadmap, and open partnership make for a refreshingly open organization.
+            </p>
+          </div>
+        </div>
+
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+          <div class="width-50vw">
+            <img src="/img/company/02.jpg" alt="We're a refreshingly open company.">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
-<section id="section-02" class="section our-value">
+
+<section id="section-02" class="section our-value u-bg-yellow">
   <div class="grid-container">
     <div class="grid-x align-center-middle">
       <h1 class="text-center u-text-bold u-trailer">Our values</h1>
@@ -19,116 +56,74 @@ permalink: "/company/"
       <div class="grid-x grid-padding-x">
         <div class="cell medium-4">
           <div class="simple-card simple-card--narrow">
-            <div class="simple-card__image text-center"><img src="/img/esteemed-results.svg" alt="Esteemed results"></div>
+            <div class="simple-card__image text-center"><img src="/img/company/esteemed-results.svg" alt="Esteemed results"></div>
             <h4 class="simple-card__header text-center u-text-bold">Results</h4>
-            <p class="simple-card__body text-center">Work can be challenging. Esteemed works tirelessly to provide tools that increase effectiveness in the workplace and the quality of life of our users.</p>
+            <p class="text-center card-text">Work can be challenging. Esteemed works tirelessly to provide tools that increase effectiveness in the workplace and the quality of life of our users.</p>
           </div>
         </div>
         <div class="cell medium-4">
           <div class="simple-card simple-card--narrow">
-            <div class="simple-card__image text-center"><img src="/img/esteemed-passion.svg" alt="Esteemed passion"></div>
+            <div class="simple-card__image text-center"><img src="/img/company/esteemed-passion.svg" alt="Esteemed passion"></div>
             <h4 class="simple-card__header u-text-bold text-center">Passion</h4>
-            <p class="simple-card__body text-center">We search for team members who have a passion for solving problems for clients, while collaborating with and mentoring fellow colleagues.</p>
+            <p class="card-text text-center">We search for team members who have a passion for solving problems for clients, while collaborating with and mentoring fellow colleagues.</p>
           </div>
         </div>
         <div class="cell medium-4">
           <div class="simple-card simple-card--narrow">
-            <div class="simple-card__image text-center"><img src="/img/esteemed-simplicity.svg" alt="Esteemed simplicity"></div>
+            <div class="simple-card__image text-center"><img src="/img/company/esteemed-simplicity.svg" alt="Esteemed simplicity"></div>
             <h4 class="simple-card__header u-text-bold text-center">Simplicity</h4>
-            <p class="simple-card__body text-center">With the workplace becoming increasingly complex, we believe access to advice, support and the right tools can help make all the difference.</p>
+            <p class="card-text text-center">As the workplace becomes increasingly complex, we believe access to advice, support, and the right tools makes all the difference.</p>
           </div>
         </div>
     </div>
   </div>
 </section>
-<section id="section-03" class="section our-people">
-  <div class="grid-container">
-    <div class="grid-x align-center-middle">
-      <div class="cell large-6">
-        <h1 class="u-text-bold">Our people</h1>
-      </div>
-      <div class="cell large-6">
-        <h2 class="company-heading">We bring <i>colleagues</i> around the world together for conversations, collaboration on work and networking.</h2>
-      </div>
-    </div>
-    </div>
-</section>
 
-<section id="section-04" class="section image-cards">
-  <div class="grid-container">
-    <div class="grid-x align-center-middle">
-      <div class="image-card grid-margin-x">
-        <div class="image-card__image">
-          <img src="/img/fpo-1.png" alt="Esteemed developer">
+<section id="section-company-03" class="section padding-vertical-0">
+  <div class="cards-list-reverse">
+    <div class="card-horizontal overflow-hidden">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h1 class="u-trailer u-text-bold">Our people</h1>
+
+          <div class="cell">
+            <p class="card-text">
+              We bring colleagues around the world together for conversations, collaboration on work, and networking.
+            </p>
+
+            <p class="card-text">
+              Our people are our greatest asset, and when you join our platform, you'll again access to our esteemed network of digital professionals.
+            </p>
+          </div>
         </div>
-        <div class="image-card__image">
-          <img src="/img/fpo-3.png" alt="Esteemed developer">
-        </div>
-        <div class="image-card__image">
-          <img src="/img/fpo-6.png" alt="Esteemed developer">
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+          <div class="width-50vw">
+            <img src="/img/company/03.jpg" alt="Helping people work smarter, not harder">
+          </div>
         </div>
       </div>
-      <div class="grid-x align-center-middle">
-        <div class="image-card grid-margin-x">
-          <div class="image-card__image">
-            <img src="/img/fpo-5.png" alt="Esteemed developer">
+    </div>
+
+    <div class="card-horizontal overflow-hidden">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h1 class="u-trailer u-text-bold">We're growing</h1>
+
+          <div class="cell">
+            <p class="card-text">We're looking to connect with like-minded individuals to join us on this incredible journey.</p>
           </div>
-          <div class="image-card__image">
-            <img src="/img/fpo-4.png" alt="Esteemed developer">
+
+          <div class="cell">
+            <a href="mailto:jobs@esteemed.io?subject=Opportunities%20at%20Esteemed&body=Dear%20future%20Esteemed%20Colleague,%0D%0A%0D%0AI%20am%20writing%20with%20interest%20in%20exploring%20opportunities%20with%20your%20team.%20I%20have%20attached%20a%20recent%20copy%20of%20my%20resume%20for%20your%20review.%20I%20look%20forward%20to%20further%20discussion.%0D%0A%0D%0AThank%20you!" class="button">Learn more</a>
           </div>
-          <div class="image-card__image">
-            <img src="/img/fpo-2.png" alt="Esteemed developer">
+        </div>
+
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+          <div class="width-50vw">
+            <img src="/img/company/04.jpg" alt="We're growing">
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
-
-<section id="section-05" class="section our-vision">
-  <div class="grid-container">
-    <div class="grid-x align-center-middle">
-      <h1 class="text-center u-text-bold u-trailer">Our vision</h1>
-    </div>
-    <div class="grid-x">
-      <div class="cell medium-4">
-        <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-open-source-icon.svg" alt="Esteemed open source"></div>
-          <p class="simple-card__body text-center">Open Source<br>Software</p>
-        </div>
-      </div>
-      <div class="cell medium-4">
-        <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-open-roadmap-icon.svg" alt="Esteemd roadmap"></div>
-          <p class="simple-card__body text-center">Open Product <br>Roadmap</p>
-        </div>
-      </div>
-      <div class="cell medium-4">
-        <div class="simple-card simple-card--narrow">
-          <div class="simple-card__image text-center"><img src="/img/esteemed-open-organization-icon.svg" alt="Esteemed open organization"></div>
-          <p class="simple-card__body text-center">Open Partnerships<br>and Organization</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="section-06" class="section growing">
-  <div class="grid-container">
-    <div class="grid-x align-center-middle">
-      <div class="cell large-6">
-        <h1 class="u-text-bold">We're growing</h1>
-      </div>
-      <div class="cell large-6 ">
-        <h2 class="company-heading">We are looking to connect with like minded individuals to join us on this incredible journey.</h2>
-      </div>
-    </div>
-    <div class="grid-x align-center-middle u-leader">
-      <div class="cell large-6">
-      </div>
-      <div class="cell large-6 u-leader">
-        <a href="mailto:jobs@esteemed.io?subject=Opportunities%20at%20Esteemed&body=Dear%20future%20Esteemed%20Colleague,%0D%0A%0D%0AI%20am%20writing%20with%20interest%20in%20exploring%20opportunities%20with%20your%20team.%20I%20have%20attached%20a%20recent%20copy%20of%20my%20resume%20for%20your%20review.%20I%20look%20forward%20to%20further%20discussion.%0D%0A%0D%0AThank%20you!" class="button" target="_blank">Join our Team</a>
-      </div>
-    </div>
-    </div>
 </section>
