[EST-101] Change homepage according to the new design.

--- a/index.html
+++ b/index.html
@@ -3,41 +3,52 @@ title: "Welcome to Esteemed"
 description: "Esteemed Talent is a new type of staffing service. Access to 13,000+ digital pros available for hire via the tools you already use."
 permalink: "/"
 ---
-
+<div class="page--home">
 <section id="section-01" class="section">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-top">
-      <div class="cell medium-6 small-order-2 medium-order-1">
-        <h1 class="u-text-bold main-title">Hire a trusted colleague.</h1>
-        <p class="h5 main-text-description">Esteemed finds the team members you need, before you need them, so you can scale with confidence.</p>
-        <a href="#contact-form" class="button button__small">Get Started Now</a>
+    <div class="grid-x grid-padding-x align-top reverse">
+      <div class="cell medium-6 small-order-2 medium-order-1 small-margin-bottom-2">
+        <div class="section-content">
+          <h1 class="u-text-bold main-title">Hire a trusted colleague.</h1>
+          <p class="h5 main-text-description">Esteemed finds the team members you need, before you need them, so you can scale with confidence.</p>
+        </div>
       </div>
-      <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
-        <img src="/img/main-hero.svg" alt="Hero image">
+      <div class="cell medium-6 small-order-1 medium-order-2">
+        <img class="section-image" src="/img/home_1.jpg" alt="Hire a trusted colleague">
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <div id="mc_embed_signup_home">
+          <form action="https://esteemed.us10.list-manage.com/subscribe/post?u=ec5b82da5b213df9999d28215&amp;id=8f463ee8d9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <h2>Ready to chat about hiring?</h2>
+              <div class="mc-field-group">
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter work email">
+              </div>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ec5b82da5b213df9999d28215_8f463ee8d9" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Schedule a demo" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+          </form>
+        </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
       </div>
     </div>
   </div>
 </section>
 
-<section id="section-02" class="section">
+<section id="section-02" class="section u-bg-lighter-gray">
   <div class="grid-container">
-    <div class="grid-x align-center-middle margin-bottom-2">
-      <div class="cell medium-8">
-        <h2 class="text-center u-text-bold">Reduce costs. Increase flexibility. Deliver better.</h2>
-        <p class="text-center h5 u-trailer">
-          Esteemed pre-screens the bench for tough hires for you.
-        </p>
+    <div class="grid-x grid-padding-x align-top reverse">
+      <div class="cell medium-6 small-order-2 medium-order-1 small-margin-bottom-2">
+        <div class="section-content">
+          <h2 class="u-text-bold main-title">Reduce costs. Increase flexibility. Deliver better.</h2>
+          <p class="h5 main-text-description">Esteemed pre-screens the bench for tough hires for you.</p>
+        </div>
       </div>
-    </div>
-    <div class="grid-x grid-padding-x align-middle">
-      <div class="cell medium-6 text-center small-margin-bottom-2">
-        <img class="width-75" src="/img/mobile-profiles.svg" alt="Mobile profiles">
-      </div>
-      <div class="cell medium-6">
-        <h3 class="u-text-medium">Talent Management</h3>
-        <p class="h5 margin-bottom-2">The Esteemed Talent Network provides instant access to thousands of pre-screened digital professionals in hard-to-hire specialties.</p>
-        <p class="h5 margin-bottom-2">Our experienced Technical Leads present qualified talent and collaborate closely to ensure clients find the right fit fast.</p>
-        <a href="#contact-form" class="button__no-bg">Get Started</a>
+      <div class="cell medium-6 small-order-1 medium-order-2">
+        <img class="width-50" src="/img/trusted-advisors.svg" alt="Esteemed trusted advisors">
       </div>
     </div>
   </div>
@@ -45,15 +56,17 @@ permalink: "/"
 
 <section id="section-03" class="section">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-middle">
-      <div class="cell medium-6 small-order-2 medium-order-1">
-        <h3 class="u-text-medium">Expand capacity instantly</h3>
-        <p class="h5 margin-bottom-2">Esteemed collaborates via the tools you already use like Slack. All subscribers receive a dedicated channel and Team Lead.</p>
-        <p class="h5 margin-bottom-2">Make requests and be connected to qualified candidates within 30 minutes* and be working within the hour, guaranteed.</p>
-        <a href="#contact-form" class="button__no-bg">Subscribe now</a>
+    <div class="grid-x grid-padding-x align-top reverse">
+      <div class="cell medium-6 small-order-2 medium-order-2 small-margin-bottom-2">
+        <div class="section-content">
+          <h2 class="u-text-bold main-title">Talent Management</h2>
+          <p class="h5 margin-bottom-2">The Esteemed Talent Network provides instant access to thousands of pre-screened digital professionals in hard-to-hire specialties.</p>
+          <p class="h5 margin-bottom-2">Our experienced Technical Leads present qualified talent and collaborate closely to ensure clients find the right fit fast.</p>
+          <a href="#contact-form" class="button__no-bg">Get Started</a>
+        </div>
       </div>
-      <div class="cell medium-6 small-order-1 medium-order-2 small-margin-bottom-2">
-        <img src="/img/desktop-slide.svg" alt="Esteemed Slack">
+      <div class="cell medium-6 small-order-1 medium-order-1">
+        <img class="width-50" src="/img/mobile-profiles.svg" alt="Mobile profiles">
       </div>
     </div>
   </div>
@@ -61,21 +74,23 @@ permalink: "/"
 
 <section id="section-04" class="section">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-middle">
-      <div class="cell medium-6 text-center small-margin-bottom-2">
-        <img class="width-75" src="/img/trusted-advisors.svg" alt="Esteemed trusted advisors">
+    <div class="grid-x grid-padding-x align-middle reverse">
+      <div class="cell medium-6 small-order-2 medium-order-1 small-margin-bottom-2">
+        <div class="section-content">
+          <h2 class="u-text-medium">Expand capacity instantly</h2>
+          <p class="h5 margin-bottom-2">Esteemed collaborates via the tools you already use like Slack. All subscribers receive a dedicated channel and Team Lead.</p>
+          <p class="h5 margin-bottom-2">Make requests and be connected to qualified candidates within 30 minutes* and be working within the hour, guaranteed.</p>
+          <a href="#contact-form" class="button__no-bg">Get Started</a>
+        </div>
       </div>
-      <div class="cell medium-6">
-        <h3 class="u-text-medium">Trusted advisors</h3>
-        <p class="h5 margin-bottom-2">Esteemed offers access to managers from technical team leads to product or category consultants, to fractional executives.</p>
-        <p class="h5 margin-bottom-2">Whatever resources and advice you need to grow your business, just make a request and we'll make the connection.</p>
-        <a href="/pricing/" class="button__no-bg">Learn more</a>
+      <div class="cell medium-6 small-order-1 medium-order-2">
+        <img src="/img/home_2.jpg" alt="Esteemed Slack">
       </div>
     </div>
   </div>
 </section>
 
-<section id="section-05" class="section texture--below">
+<section id="section-05" class="section texture--below u-bg-lighter-gray">
   <div class="grid-container">
     <div class="grid-x align-center-middle">
       <h2 class="text-center u-text-bold margin-bottom-3">How it works</h2>
@@ -109,22 +124,27 @@ permalink: "/"
   </div>
 </section>
 
-<section id="section-06" class="section texture--above texture--below u-bg-lighter-gray">
+<section id="section-06" class="section texture--above texture--below">
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-middle">
-      <div class="cell medium-6">
-        <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg" alt="Esteemed talent">
-        <h3 class="margin-bottom-1 width-75"><span class="u-text-medium">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
-        <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence, and get reliable talent on-demand.</p>
-        <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
-        <a href="#contact-form" class="button black button__small">Subscribe Now</a>
+      <div class="cell medium-6 small-margin-bottom-2">
+        <div class="section-content">
+          <img class="esteemed-talent-logo margin-bottom-1" src="/img/esteemed-talent-logo.svg" alt="Esteemed talent">
+          <h3 class="margin-bottom-1"><span class="u-text-medium">You plan digital projects every day. Plan your team with</span> esteemed talent.</h3>
+          <p class="h6 margin-bottom-2">By combining human insight with cutting-edge tools and automation, <strong>esteemed talent</strong> powers your staffing landscape. Streamline your delivery model, grow with confidence, and get reliable talent on-demand.</p>
+          <p class="h6 margin-bottom-2">Your esteemed team is made up of experienced managers and engineers who can help you achieve your goals.</p>
+          <div>
+            <a href="#contact-form" class="button button__small">Subscribe Now</a>
+          </div>
+        </div>
       </div>
       <div class="cell medium-6">
-        <img src="/img/digital_projects_pair_of_coders.svg" alt="Paired programming">
+        <img src="/img/home_3.jpg" alt="Paired programming">
       </div>
     </div>
   </div>
 </section>
+</div>
 
 <section id="section-07" class="section section__testimonial">
   <div class="grid-container">
