[EST-96] Fix issue with title\subtitle on mobile size.

--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,8 @@ pagination:
 <div class="hero-blog-container">
   <div class="heroBanner-left">
     <h1 class="u-text-bold main-title">The Star</h1>
-    <div class="heading-subtitle">Resources you need to land flexible jobs,<br/>
-      meet like-minded colleagues, and build<br/>
+    <div class="heading-subtitle">Resources you need to land flexible jobs,
+      meet like-minded colleagues, and build
       your business with confidence.</div>
   </div>
   <div class="heroBanner-right">
