[est-92] Update partner page content and style

--- a/partner-registration.html
+++ b/partner-registration.html
@@ -5,8 +5,103 @@ image: "/img/partners.png"
 contact_form: false
 permalink: "/partners/partner-registration/"
 ---
+<section id="section-partner" class="section padding-vertical-0">
+  <div class="cards-list-reverse">
+    <div class="card-horizontal overflow-hidden">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h1 class="u-trailer u-text-bold">We help grow your business.</h1>
 
-<section class="section">
+          <div class="cell">
+            <a href="#application" class="button" target="_blank">Partner with us</a>
+          </div>
+        </div>
+
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+          <div class="width-50vw">
+            <img src="/img/partner_1.jpg" alt="We help grow your business.">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-horizontal overflow-hidden">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h2 class="u-trailer u-text-bold">A partnership is a beautiful thing.</h2>
+
+          <div class="cell">
+            <p class="card-text">
+              By partnering with Esteemed, you can tap
+              into new revenue streams, find talent, and
+              better meet the needs of your customers.
+            </p>
+          </div>
+        </div>
+
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+          <div class="width-50vw">
+            <img src="/img/partner_2.jpg" alt="A partnership is a beautiful thing.">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-horizontal overflow-hidden u-bg-gray">
+      <div class="row">
+        <div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+          <h2 class="u-trailer u-text-bold">Enjoy the benefits of an elite network.</h2>
+
+          <div class="cell">
+            <p class="card-text">
+              We've cultivated a network of 13,000+
+              digital experts. Now, we want to share
+              those resources with you — as partners.
+            </p>
+          </div>
+        </div>
+
+        <div class="small-12 medium-6 padding-horizontal-0 img-wrapper partner-slider">
+          <div class="width-50vw u-bg-green">
+            <h3 class="u-trailer u-text-bold">In additional to talent, an <strong>Esteemed</strong> partnership gives you access to:</h3>
+            <div class="orbit slider" role="region" aria-label="Favorite Space Pictures" data-orbit>
+              <div class="orbit-wrapper">
+                <div class="orbit-controls">
+                  <div class="orbit-arrow orbit-previous"></div>
+                  <div class="orbit-arrow orbit-next"></div>
+                </div>
+                <ul class="orbit-container slider">
+                  <div class="is-active orbit-slide">
+                    <img src="/img/Esteemed%20Partner%20Page-02.svg" alt="A partnership is a beautiful thing.">
+                    <div class="slide-title">Consulting</div>
+                    <div class="slide-descr">Need advice from an expert? We offer consulting services to our esteemed partners.</div>
+                  </div>
+                  <div class="orbit-slide">
+                    <img src="/img/Esteemed%20Partner%20Page-03.svg" alt="A partnership is a beautiful thing.">
+                    <div class="slide-title">Strategy</div>
+                    <div class="slide-descr">Our team can help identify resources and assist you with coordination every step of the way.</div>
+                  </div>
+                  <div class="orbit-slide">
+                    <img src="/img/Esteemed%20Partner%20Page-04.svg" alt="A partnership is a beautiful thing.">
+                    <div class="slide-title">Resources</div>
+                    <div class="slide-descr">Choose from our diverse talent pool at a market rate.</div>
+                  </div>
+                  <div class="orbit-slide">
+                    <img src="/img/Esteemed%20Partner%20Page-05.svg" alt="A partnership is a beautiful thing.">
+                    <div class="slide-title">Support</div>
+                    <div class="slide-descr">Think of us as a mentor. We're here to give you resources to improve your craft and grow your client base.</div>
+                  </div>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="application" class="section">
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-top">
       <div class="cell">
