Change pricing links to get-a-quote

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ permalink: "/"
           <div class="simple-card__image text-center"><img src="/img/icon-brands.svg" alt="Esteemed for brands"></div>
           <h4 class="simple-card__header u-text-bold">For Brands</h4>
           <p class="simple-card__body margin-bottom-1">Scale digital teams quickly with access to 10,000+ pre-screened contractors in hard-to-hire categories.</p>
-          <a href="/pricing/" class="button__no-bg align-center-middle">Learn More</a>
+          <a href="/get-a-quote/" class="button__no-bg align-center-middle">Learn More</a>
         </div>
       </div>
       <div class="cell medium-4">
@@ -109,7 +109,7 @@ permalink: "/"
           <div class="simple-card__image text-center"><img src="/img/icon-agencies.svg" alt="Esteemed for agencies"></div>
           <h4 class="simple-card__header u-text-bold">For Agencies</h4>
           <p class="simple-card__body margin-bottom-1">Hire agency-experienced talent. Manage unlimited clients, projects, and contractors all in one place.</p>
-          <a href="/pricing/" class="button__no-bg align-center-middle">Learn More</a>
+          <a href="/get-a-quote/" class="button__no-bg align-center-middle">Learn More</a>
         </div>
       </div>
       <div class="cell medium-4">
@@ -117,7 +117,7 @@ permalink: "/"
           <div class="simple-card__image text-center"><img src="/img/icon-talent.svg" alt="Esteemed for talent"></div>
           <h4 class="simple-card__header u-text-bold">For Talent</h4>
           <p class="simple-card__body margin-bottom-1">Build pipelines to top agencies and brands. Find quality projects and get paid quickly.</p>
-          <a href="/pricing/" class="button__no-bg align-center-middle">Learn More</a>
+          <a href="/get-a-quote/" class="button__no-bg align-center-middle">Learn More</a>
         </div>
       </div>
     </div>
