--- a/partner-registration.html
+++ b/partner-registration.html
@@ -110,7 +110,7 @@ permalink: "/partners/partner-registration/"
         <p>For all qualified partners, we provide consulting, strategy, resources, and support. If you're a developer in need or an agency with under 5 employees, we'd love to chat. To get started, fill out the form below. Once approved, we'll invite you to Slack. A dedicated Resource Manager will review your application, and we'll get you the help you need.</p>
         <!-- Begin Mailchimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-        <div id="mc_embed_signup">
+        <div id="mc_embed_signup" class="partner-registration-form">
           <form action="https://esteemed.us10.list-manage.com/subscribe/post?u=ec5b82da5b213df9999d28215&amp;id=b9f5c3c683" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
               <div class="indicates-required"><span class="asterisk"></span>* indicates required</div>
