--- a/member-compensation-plan.html
+++ b/member-compensation-plan.html
@@ -10,70 +10,204 @@ faqs:
 - {}
 
 ---
-<div class="container">
-	<div class="row">
-		<h1>Member Compensation Plan</h1>
-	</div>
-	<div class ="row">
-		<p class="h5 main-text-description">
-At Esteemed, we are changing the way highly-skilled IT talent is found, by taking a community-driven approach!
-			<br/>
-		</p>
-		<p class="h5 main-text-description">
-Because of that, we want to make sure you are rewarded for your efforts beyond your day job! We are rolling out a bonus program for our members who want to flex their entrepreneurial muscles, and further both the company we’re building, and their own personal income.
-    </p>
-		<p class="h5 main-text-description">
-			<b>We realize most of our team are contacted by recruiters, agencies, and companies looking to employ them on a regular basis.</b> We hope to partner with our member and employee partners to grow our business to new heights, by capturing that intel, and putting it to good use, expanding our client base.
-    
-		</p>
-		<p class="h5 main-text-description">
- If you bring us information that leads to us filling a job, we will 
-			<b>pay you a monthly commission for referrals</b>, based on the profit margin generated for up to 18 months!
-    
-		</p>
-		<p class="h5 main-text-description">
-We will also be running open training sessions each month with our VP, Rob Schaust, giving you methods and advice to capture great information effectively and efficiently. Join as many, or as few, of these as you’d like.
-    </p>
-	</div>
-	<div class="row">
-		<h2> Breakdown </h2>
-	</div>
-	<div class="row">
-		<h4>Lead/Information Passed: 5%</h4>
-	</div>
-	<div class ="row">
-		<p class="h5 main-text-description">Any info you gather, such as “ABC Co. is hiring for a mid level developer,” or “XYZ Co. sent me a LI message to see if I was interested.”</p>
-	</div>
-	<div class="row">
-		<h4>Introduction: 7%</h4>
-	</div>
-	<div class ="row">
-		<p class="h5 main-text-description">Defined as an email or phone introduction, of an Esteemed salesperson with a client.</p>
-	</div>
-	<div class="row">
-		<h4>Deal Passed: 10%</h4>
-	</div>
-	<div class="row">
-		<p class="h5 main-text-description">Example: “I interviewed with LMNOP Co., and told them I work with Esteemed, and would want to work through them. We have a call with them to discuss details tomorrow”</p>
-	<p class="h5 main-text-description">Example: You speak with someone looking to hire you directly, and get the information, and tell them that you don’t feel you’re a fit, but that your company, Esteemed, can help. 
-	</div>
-	<div class="row">
-		<h4>Candidate Referral: 5%</h4>
-	</div>
-	<div class ="row">
-		<p class="h5 main-text-description">Example: You refer us a candidate who fits an open role we are working, or a hot skillset we request. If that person is hired and deployed, you will be compensated, as soon as they hit their 30th day!
-  
+<section id="section-member-compensation-plan" class="section padding-vertical-0">
+	<div class="cards-list-reverse">
+		<div class="card-horizontal overflow-hidden">
+			<div class="row">
+				<div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+					<h1 class="u-trailer u-text-bold">Join our Member Comp Plan</h1>
+					<div class="cell">
+						<a href="#application" class="button" target="_blank">Register a Deal</a>
+					</div>
+				</div>
+
+				<div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+					<div class="width-50vw">
+						<img src="/img/mcp_1.jpg" alt="Join our Member Comp Plan">
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="row">
-			<h2> Terms </h2>
+
+		<div class="card-horizontal overflow-hidden">
+			<div class="row">
+				<div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+					<h2 class="u-trailer u-text-bold">We’re changing how highly-skilled talent is found.</h2>
+					<div class="cell">
+						<p class="card-text">
+							We know our team is contacted by
+							recruiters, agencies, and companies
+							regularly.
+							Bring us information that leads to a filled
+							job, and we’ll pay you a monthly
+							commission for referrals.
+						</p>
+					</div>
+				</div>
+
+				<div class="small-12 medium-6 padding-horizontal-0 img-wrapper">
+					<div class="width-50vw">
+						<img src="/img/mcp_2.jpg" alt="We’re changing how highly-skilled talent is found.">
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="row">
-			<p class="h5 main-text-description">Monthly and cumulative. If you bring in a new client for us, any other deal that generates from the same hiring manager will pay out as well. If a 10% deal is closed, you would collect the 5% on each subsequent job they do. If you continue developing the account and bring more fully-baked deals, those would continue to be at 10%.</p>
-			<p class="h5 main-text-description">This program would be compiled and paid out monthly, in addition to any other compensation you may receive from Esteemed. It will pay 1 month trailing, meaning the bonus generated for the billing month of January would be paid in February, and so forth.</p>
-			<p class="h5 main-text-description">Bonuses would continue at 100% payout for the first 12 months of each deal, and then at 50% for the following 6 months, before dropping off entirely at the 18 month mark.</p>
+
+		<div class="card-horizontal overflow-hidden u-bg-gray">
+			<div class="row">
+				<div class="small-12 medium-6 flex-container flex-dir-column align-center padding-3">
+					<h2 class="u-trailer u-text-bold">Plan terms</h2>
+
+					<div class="cell">
+						<p class="card-text">
+							Commissions are contingent upon
+							whether or not Esteemed was aware of
+							the lead or deal beforehand.
+							Take a look at some of our commissions.
+						</p>
+					</div>
+				</div>
+
+				<div class="small-12 medium-6 padding-horizontal-0 img-wrapper mcp-slider">
+					<div class="width-50vw u-bg-yellow">
+						<div class="orbit slider" role="region" aria-label="Favorite Space Pictures" data-orbit>
+							<div class="orbit-wrapper">
+								<div class="orbit-controls">
+									<div class="orbit-arrow orbit-previous"></div>
+									<div class="orbit-arrow orbit-next"></div>
+								</div>
+								<ul class="orbit-container slider margin-bottom-2">
+									<div class="is-active orbit-slide">
+										<h3 class="u-trailer u-text-bold">Lead/Information Passed: Recruitment Company or C2C</h3>
+										<div class="title u-text-bold margin-top-2">3%</div>
+										<div class="slide-descr">Any info you gather, such as “ABC Co. is hiring for a mid-level developer,” or “XYZ Co. sent me a LI message to see if I was interested.”</div>
+									</div>
+									<div class="orbit-slide">
+										<h3 class="u-trailer u-text-bold margin-top-2 margin-bottom-3">Introduction</h3>
+										<div class="title u-text-bold">7%</div>
+										<div class="slide-descr">Defined as an email or phone introduction, of an Esteemed salesperson with a client.</div>
+									</div>
+									<div class="orbit-slide">
+										<h3 class="u-trailer u-text-bold margin-top-2 margin-bottom-3">Deal Passed</h3>
+										<div class="title u-text-bold">10%</div>
+										<div class="slide-descr">Someone looking to hire you directly. Get the information, say you don’t feel you’re a fit, but that your company, Esteemed, can help.</div>
+									</div>
+									<div class="orbit-slide">
+										<h3 class="u-trailer u-text-bold margin-top-2 margin-bottom-3">Candidate Referral</h3>
+										<div class="title u-text-bold">5%</div>
+										<div class="slide-descr">Refer a candidate who fits an open role, or a requested skillset. You will be compensated after your referral hits their 30th day on deployment!</div>
+									</div>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="row">
-			<p class="h5 main-text-description">
-				<a href="https://share.hsforms.com/1wlLOj-ESQsiZ7fkzGXZZbA4ghnj">Register Your Deal Here! </a>
-			</p>
+	</div>
+</section>
+
+<section id="application" class="section section-mcp-form">
+	<div class="grid-container">
+		<div class="grid-x grid-padding-x align-top">
+			<div class="cell">
+				<h2 class="h2 text-center margin-bottom-2">Register a deal today!</h2>
+				<p class="h5 text-center margin-bottom-2">Fill out the form below to get in touch with a member
+					of our Sales team. We look forward to hearing from you!</p>
+				<!-- Begin Mailchimp Signup Form -->
+				<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+				<div id="mc_embed_signup" class="partner-registration-form">
+					<form
+						action="https://esteemed.us10.list-manage.com/subscribe/post?u=ec5b82da5b213df9999d28215&amp;id=8595453212"
+						method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+						target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+							<div class="mc-field-group size1of2">
+								<label for="mce-FNAME">First Name </label>
+								<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-LNAME">Last Name </label>
+								<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-EMAIL">Email Address
+								</label>
+								<input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-PHONE">Phone Number </label>
+								<input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE5">Prospect Company Name </label>
+								<input type="text" value="" name="MMERGE5" class="" id="mce-MMERGE5">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE6">Prospect First Name </label>
+								<input type="text" value="" name="MMERGE6" class="" id="mce-MMERGE6">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE7">Prospect Last Name </label>
+								<input type="text" value="" name="MMERGE7" class="" id="mce-MMERGE7">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE8">Prospect Phone Number </label>
+								<input type="text" value="" name="MMERGE8" class="" id="mce-MMERGE8">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE10">Prospect Email </label>
+								<input type="text" value="" name="MMERGE10" class="" id="mce-MMERGE10">
+							</div>
+							<div class="mc-field-group size1of2">
+								<label for="mce-MMERGE9">Tell us more about this deal. </label>
+								<input type="text" value="" name="MMERGE9" class="" id="mce-MMERGE9">
+							</div>
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>
+							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+																																												name="b_ec5b82da5b213df9999d28215_8595453212"
+																																												tabindex="-1" value=""></div>
+							<div class="clear"><input type="submit" value="Apply" name="subscribe" id="mc-embedded-subscribe"
+																				class="button"></div>
+						</div>
+					</form>
+					<p class="h6 margin-bottom-1 margin-top-1">*Monthly and cumulative. If you bring in a new client for us, any other deal that generates from the same hiring manager will pay out as well.
+						If a 10% deal is closed, you would collect the 5% on each subsequent job they do. If you continue developing the account and bringing more deals, those would continue at 10%.</p>
+					<p class="h6 margin-bottom-1">*This program would be compiled and paid out monthly, in addition to any other compensation you may receive from Esteemed.
+						It will pay 1 month trailing, meaning the bonus generated for the billing month of January would be paid in February, and so forth.</p>
+					<p class="h6">*Bonuses would continue at 100% payout for the first 12 months of each deal, and then at 50% for the following 6 months, before dropping off entirely at the 18 month mark.</p>
+				</div>
+				<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+				<script type='text/javascript'>(function ($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0] = 'EMAIL';
+            ftypes[0] = 'email';
+            fnames[1] = 'FNAME';
+            ftypes[1] = 'text';
+            fnames[2] = 'LNAME';
+            ftypes[2] = 'text';
+            fnames[6] = 'JOBTITLE';
+            ftypes[6] = 'text';
+            fnames[3] = 'ADDRESS';
+            ftypes[3] = 'address';
+            fnames[4] = 'PHONE';
+            ftypes[4] = 'phone';
+            fnames[5] = 'MMERGE5';
+            ftypes[5] = 'url';
+            fnames[7] = 'DESCRPTN';
+            ftypes[7] = 'text';
+            fnames[8] = 'TRUSTADV';
+            ftypes[8] = 'radio';
+            fnames[9] = 'EMPLYNUM';
+            ftypes[9] = 'dropdown';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);</script>
+			</div>
 		</div>
+	</div>
+</section>
