--- a/company.html
+++ b/company.html
@@ -92,7 +92,7 @@ permalink: "/company/"
             </p>
 
             <p class="card-text">
-              Our people are our greatest asset, and when you join our platform, you'll again access to our esteemed network of digital professionals.
+              Our people are our greatest asset. Join our platform today and gain access to our growing network of esteemed digital professionals.
             </p>
           </div>
         </div>
