--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to Esteemed"
-description: "Esteemed Talent is a new type of staffing service. Access to 13,000+ digital pros available for hire via the tools you already use."
+description: "Esteemed Talent is a new type of staffing service. Access 13,000+ digital pros available for hire via the tools you already use."
 permalink: "/"
 ---
 <div class="page--home">
